# Asteroids

./: .gitignore  Asteroids  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  readme.md
include/: class_declarations.h  codes.h  colors.h  constants.h  fonts.h  interfaces.h
include/const_values/: constants.h
include/definitions/: logic_interfaces.h  objects_interfaces.h  views_interfaces.h
include/types/: enums.h  structures.h
src/: Asteroid.cpp  Bullet.cpp  FireObject.cpp  Game.cpp  GameEngine.cpp  GameObject.cpp  Heart.cpp  Hearts.cpp  KinematicObject.cpp  Makefile  Player.cpp  constants.h  interfaces.h  main.cpp
src/abstract/: KinematicObject.cpp  VisualObject.cpp
src/logic/: CollisionBody.cpp  Game.cpp  GameEngine.cpp
src/views/: Game.cpp  GameOver.cpp  Menu.cpp  Pause.cpp
src/views/elements/: Button.cpp  Label.cpp
src/visual/: BigAsteroid.cpp  CollisionBody.cpp  Heart.cpp  Hearts.cpp
src/visual/kinematic/: Asteroid.cpp  BigAsteroid.cpp  Bullet.cpp  FireObject.cpp  Player.cpp  SmallAsteroid.cpp
